# promptpantry

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  RELEASING.md  SECURITY.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/cli/: copy.rs  doctor.rs  init.rs  library.rs  list.rs  mod.rs  new.rs  sync.rs
src/core/: card.rs  catalog.rs  config.rs  context.rs  doctor.rs  editor.rs  gitops.rs  mod.rs  search.rs  store.rs  template.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: cli.rs
