[package]
name = "prompt-pantry"
version = "0.1.0"
edition = "2021"

[lib]
name = "prompt_pantry"
path = "src/lib.rs"

[[bin]]
name = "pp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "6"
nucleo-matcher = "0.3"
ratatui = "0.29"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
