[package]
name = "prompt-pantry"
version = "0.1.0"
edition = "2021"
description = "Local git-backed prompt library CLI and TUI"
repository = "https://github.com/EricGrill/promptpantry"
homepage = "https://github.com/EricGrill/promptpantry"
readme = "README.md"
keywords = ["prompts", "cli", "tui", "git", "workflow"]
categories = ["command-line-utilities"]
publish = false
exclude = ["AGENTS.md", "docs/superpowers/**", ".claude/**", ".omx/**"]

[lib]
name = "prompt_pantry"
path = "src/lib.rs"

[[bin]]
name = "pp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "6"
nucleo-matcher = "0.3"
ratatui = "0.30"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
